--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <head>
-<title>This is the greatest thing ever</title>
+<title>Hello World</title>
 </head>
 <div class="info">
 <h>Hello World!</h>
